[package]
name = "matrixapi"
version = "0.1.0"
authors = ["Björn Guth <scatty@bguth.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
xdg = "2.2.0"
toml = "0.5.6"
serde = { version = "1.0.115", features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
